--- a/Cocoduino-Info.plist
+++ b/Cocoduino-Info.plist
@@ -52,7 +52,7 @@
 			<key>CFBundleTypeName</key>
 			<string>Cocoduino Archive</string>
 			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
+			<string>Viewer</string>
 			<key>NSDocumentClass</key>
 			<string>FKSketchDocument</string>
 		</dict>
@@ -108,7 +108,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string></string>
+	<string>Icon.icns</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.fabian-kreiser.cocoduino</string>
 	<key>CFBundleInfoDictionaryVersion</key>
